@@ -23,11 +23,16 @@ module Fairy
       @njob_seq = -1
       @njob_seq_mutex = Mutex.new
 
+Log::debug(self, "AA:0");
       @status = ST_INIT
+Log::debug(self, "AA:1");
       @status_mon = processor.njob_mon.new_mon
+Log::debug(self, "AA:2");
       @status_cv = @status_mon.new_cv
+Log::debug(self, "AA:3");
 
       start_watch_status
+Log::debug(self, "AA:4");
     end
 
     attr_reader :processor
@@ -75,19 +80,27 @@ module Fairy
 
     def start_watch_status
       # 初期状態通知
+Log::debug(self, "A:0");
       notice_status(@status)
 
+Log::debug(self, "A:1");
       @processor.njob_mon.entry do
+Log::debug(self, "A:2");
 	@status_mon.synchronize do
+Log::debug(self, "A:3");
 	  old_status = nil
 	  loop do
 	    @status_cv.wait_while{old_status == @status}
 	    old_status = @status
 	    notice_status(@status)
 	    break if @status == ST_FINISH
+Log::debug(self, "A:4");
 	  end
+Log::debug(self, "A:5");
 	end
+Log::debug(self, "A:6");
       end
+Log::debug(self, "A:7");
       nil
     end
 
@@ -97,7 +110,9 @@ module Fairy
 
     def notice_status(st)
 #      @status_mon.entry do
+Log::debug(self, "A2:1");
 	@processor.update_status(self, st)
+Log::debug(self, "A2:2");
 #      end
     end
 
