@@ -355,7 +355,9 @@ module Fairy
 
     def update_status(ntask, st)
 Log::debug(self, "UPDATE_STATUS: #{ntask}, #{st}")
+Log::debug(self, "A3:1");
       @status_mx.synchronize do
+Log::debug(self, "A3:2");
 	@ntask_status[ntask] = st
 
 	case st
@@ -391,35 +393,55 @@ Log::debug(self, "UPDATE_STATUS E: #{st}")
 Log::debug(self, "UPDATE_STATUS F: #{st}")
 	    @status = :ST_ACTIVATE
 	  end
+Log::debug(self, "A3:3");
 	end
+Log::debug(self, "A3:4");
 	@status_cv.broadcast
       end
+Log::debug(self, "A3:5");
     end
 
     def start_watch_status
       # 初期状態通知
+Log::debug(self, "B1:1");
       notice_status(@status)
+Log::debug(self, "B1:2");
 
       @njob_mon.entry do
+Log::debug(self, "B1:3");
 	@status_mx.synchronize do
+Log::debug(self, "B1:4");
 	  old_status = nil
 	  old_no_active_ntasks = 0
+Log::debug(self, "B1:5");
 	  loop do
+Log::debug(self, "B1:6");
 	    @status_cv.wait_while{
 	      old_status == @status && old_no_active_ntasks == no_active_ntasks
 	    }
+Log::debug(self, "B1:7");
 	    no = no_active_ntasks
 	    if old_no_active_ntasks != no
+Log::debug(self, "B1:8");
 	      old_no_active_ntasks = no
+Log::debug(self, "B1:9");
 	      @controller.update_active_ntasks(self, no)
+Log::debug(self, "B1:A");
 	    end
 	    if old_status != @status
+Log::debug(self, "B1:B");
 	      old_status = @status
+Log::debug(self, "B1:C");
 	      notice_status(@status)
+Log::debug(self, "B1:D");
 	    end
+Log::debug(self, "B1:E");
 	  end
+Log::debug(self, "B1:F");
 	end
+Log::debug(self, "B1:G");
       end
+Log::debug(self, "B1:H");
       nil
     end
 
