@@ -7108,8 +7108,8 @@ when "113.0"
   f.here.each{|e| puts e}
 
 when "114"
-#  f = fairy.input(["file://emperor//home/keiju/public/a.research/fairy/git/fairy/sample/wc/data/sample_30M.txt"])
-  f = fairy.input(["file://emperor//home/keiju/public/a.research/fairy/git/fairy/sample/wc/data/fairy.cat"]*1)
+  f = fairy.input(["file://emperor//home/keiju/public/a.research/fairy/git/fairy/sample/wc/data/sample_30M.txt"])
+#  f = fairy.input(["file://emperor//home/keiju/public/a.research/fairy/git/fairy/sample/wc/data/fairy.cat"]*1)
   f = f.mapf(%{|ln| begin
                       ln.chomp.split
 		    rescue
@@ -7118,11 +7118,11 @@ when "114"
   })
   f = f.group_by(%{|w| w},
 		     :no_segment => 1,
-		     :postqueuing_policy => {:queuing_class => :FileMarshaledQueue},
-		     :postfilter_prequeuing_policy => {:queuing_class => :FileMarshaledQueue},)
+		     :postqueuing_policy => {:queuing_class => :XMarshaledQueue},
+		     :postfilter_prequeuing_policy => {:queuing_class => :XMarshaledQueue},)
   f = f.map(%{|values| [values.key, values.size].join(" ")})
-  f.here.each{|e| puts e}
-  # f.output("test/test-78.vf")
+#  f.here.each{|e| puts e}
+  f.output("test/test-114.vf")
 
 
 when "114.0"
