@@ -1,3 +1,9 @@
+Wed Mar  9 21:09:34 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* xmarshaled_queue.c, port-xmarshaled-queue.rb: xmarshaled-queue対応
+	* p-filter.rb, port.rb: fibermon対応
+	* p-task.rb, processor.rb: デバッグコード挿入
+
 Tue Mar  8 00:26:56 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* p-task.rb, processor.rb, port-marshaled-queue.rb, port.rb: new
